added contact form

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,7 +33,7 @@
   />
   <link rel="stylesheet" type="text/css" href="./design.css" />
   
-    <title>ShopIT - Complete Ecommerce Project</title>
+    <title>EminentWears - Complete Ecommerce Store</title>
   </head>
   <body>
     <script src="index.js" ></script>
